--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,3 +75,14 @@ body {
   color: red;
   text-align: center;
 }
+
+.update-movie {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.update-movie > * {
+  margin: 1%;
+}
